
*	Fixed syntax error in journal.pl, removed unused getArticle()
	method

*	Fixed bad method calls in Slash::DB::Static::MySQL

*	Fixed broken bulk mail calls in dailyStuff

*	Fixed colors not displaying after save in color editor

*	Fixed story list times in admin.pl

*	Added Even More upgrade information to INSTALL, regarding
	what templates to add/delete with each version


slash-2.0.0-pre2, 2001.04.24
----------------------------

*	Added more information to INSTALL and INSTALL.debian

*	Makefile fixes

*	RPM support

*	Move sendEmail to Slash::Utility

*	Allow createSelect to take an arrayref, in addition to
	already taking a hashref

*	Fix getData calls in Slash.pm to get proper page/section set

*	Fix Slash::Apache::IndexHandler

*	Various fixes in Slash::DB::MySQL, including proper saving
	of description for vars, creation of stories in newstories
	table, some time calculations

*	Added exists() method to Slash::Install to check for existence
	of installed plugin

*	Allow passing of time offset to timeCalc()

*	Export fixint() from Slash::Utility

*	Fix template-tool to use -O option for saving templates

*	Added slashstyle.pod and boilerplates to docs/

*	Various minor fixes to admin.pl

*	A bunch of changes to Journal, including fixes and changes
	for previewing, themes, templates, RSS, top journals, and
	additions of pagination and viewing recent journal entry
	on user's info page *

*	Search now works.  XML/RSS search features have been added;
	use content_type=rss to get data in RSS format

*	Catch links to old .shtml article pages and redirect to the
	correct location in 404.pl

*	Fixes to story links and story titles on index.pl

*	Fixes to users.pl, including proper saving of slashboxes
	(exboxes) from editHome page

*	Various minor fixes to templates

*	Change RSS policy to _not_ "HTML-encode" the link elements,
	added xmlencode_plain function


slash-2.0.0-pre1, 2001.03.20
----------------------------
