@@ -84,11 +84,16 @@ install: slash plugins
 # directory it will be easy
 	# Lets go install the libraries, remember to clean out old versions.
 	(cd Slash; make install UNINST=1)
-	# Lets go install the plugin's libraries
+	# Lets go install the plugin libraries
+	#
+	# This tries to intelligently install plugins based on whether or not
+	# they have a Makefile. Not all current plugins have the "install" target
+	# so we shouldn't track them for errors, at this time. This should be 
+	# fixed, eventually.
 	#
 	# If 'plugins' is already a dependency, why do we need to regenerate the
 	# Makefile? - Cliff
-	(cd plugins; \
+	-(cd plugins; \
 	 for a in $(PLUGINS); do \
 	 	(cd $$a; \
 	 	if [ -f Makefile ]; then \
@@ -148,7 +153,10 @@ install: slash plugins
 		install -d $(SLASH_PREFIX)/$$d; \
 		install $$f $(SLASH_PREFIX)/$$d/$$b; \
 		if [ -f "$$f.bak" ]; then \
-			rm $$f; mv $$f.bak $$f; \
+			if [ -f $$f ]; then \
+				rm $$f; \
+			fi; \
+			mv $$f.bak $$f; \
 		fi; \
 	done)
 
